@@ -331,21 +331,6 @@ tail_walk_char (Tail            *t,
     return FALSE;
 }
 
-Bool
-tail_is_walkable_char (Tail            *t,
-                       TrieIndex        s,
-                       short            suffix_idx,
-                       TrieChar         c)
-{
-    const TrieChar *suffix;
-
-    suffix = tail_get_suffix (t, s);
-    if (!suffix)
-        return FALSE;
-
-    return suffix[suffix_idx] == c;
-}
-
 /*
 vi:ts=4:ai:expandtab
 */
